--- a/non_website/notes_d1.Rmd
+++ b/non_website/notes_d1.Rmd
@@ -22,12 +22,19 @@ workshop outline, code of conduct, technical questions, link to collaborative no
 
 
 10:00-10:45
-Open collaboration
-Reproducible research and data analysis I
-Experimental design and p-hacking
+Open collaboration.
+open source project. Linux
+
+Introduction to git/github: get you page ready in the website.
+
+step 1: login, change the yml page, pull request it.
+step 2: clone the repo, add picture, modify yml, commit, push 
+
+
+
 10:45-11:00
 BREAK
-BREAK
+
 11:00-11:45
 Open Data I (raw data)
 Reproducible research and data analysis II
@@ -53,5 +60,7 @@ Public engagement / Open Communities
 Day review/discussion
 Day review/discussion
 
+Reproducible research and data analysis I
+Experimental design and p-hacking
 
 Experimental design and p-hacking
