--- a/non_website/presentation_d1.Rmd
+++ b/non_website/presentation_d1.Rmd
@@ -70,6 +70,6 @@ Get ready for it !
 
 # open collaboration: 
 
-> - [Version control and git: the basics of “git commit”](gitbasics.html){:target="_blank"}
+> - [Version control and git, the basics of “git commit”](gitbasics.html)
 > - Using Gitlab / GitHub
 
